...
                }
            }
        },
        floatingActionButton = {
            if (screen == Screen.COMMAND || screen == Screen.BOARD) {
                FloatingActionButton(onClick = { screen = Screen.NEW_MISSION }) {
                    Icon(Icons.Outlined.Add, contentDescription = "Add task")
                }
            }
        }
    ) { padding ->
        Box(Modifier.fillMaxSize().padding(padding)) {
            when (screen) {
...
